kubernetes/front-depl-quarkus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: front-quarkus
  name: front-quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-quarkus
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front-quarkus
    spec:
      containers:
      - image: quarkus-react:1.0.2
        name: front
        resources: {}
status: {}
