kubernetes/front-service-quarkus-fp.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: front-service-quarkus
  name: front-service-quarkus
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: front-quarkus
  type: ClusterIP
status:
  loadBalancer: {}
