kubernetes/front-ingress-quarkus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: front-ingress-quarkus
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: front-ingress-quarkus
            port:
              number: 81
        path: /
        pathType: Exact
status:
  loadBalancer: {}
