kubernetes/front-route-quarkus.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-quarkus
  namespace: pitc-quarkusproject-dev
  labels:
    app: front-quarkus
    app.kubernetes.io/component: front-quarkus
    app.kubernetes.io/instance: front-quarkus
    app.kubernetes.io/name: front-quarkus
    app.kubernetes.io/part-of: pitc-imageforquarkusfirst-dev
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      subresource: status
spec:
  to:
    kind: Service
    name: front-quarkus
    weight: 100
  port:
    targetPort: 3000-tcp
status:
